<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Carzis</string>
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="title_connecting">Connecting…</string>
    <string name="title_connected_to" formatted="true">Connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">Not connected</string>
    <string name="title_connected">Connected</string>
    <string name="scanning">Search  device…</string>
    <string name="select_device">Select device</string>
    <string name="none_paired">No previously used devices</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">previously used devices</string>
    <string name="title_other_devices">"available devices "</string>
    <string name="button_scan">Search  device</string>
    <string name="connectbt">ConnectBT</string>
    <string name="connectwifi">ConnectWIFI</string>
    <string name="disconnectbt">DisConnectBT</string>
    <string name="disconnectwifi">DisConnectWIFI</string>
    <string name="tryconnectbt">Trying to connect bt</string>
    <string name="tryconnectwifi">Trying to connect wifi</string>
    <string name="terminal">Terminal</string>
    <string name="gauges">Gauges</string>
    <string name="action_settings">Settings</string>
    <string name="menu">Menu</string>
    <string name="reset">Reset</string>
    <string name="cut_off">Cut Off Fractional Frequency</string>
    <string name="weights">Number of Weights</string>
    <string name="cut_off_value">Cutoff Value = 0.01</string>
    <string name="weights_value">Weights = 4</string>
    <string name="odometer_reading">Odometer Reading</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>
    <string name="set_odometer">Set Odometer</string>
    <string name="reset_trip">Reset Trip</string>
    <string name="dimen_title_voltage">V</string>
    <string name="dimen_title_speed">mil/ h</string>
    <string name="dimen_title_gas">%</string>
    <string name="dimen_title_engine_temp">°F</string>
    <string name="dimen_title_coolant_temp">°F</string>
    <string name="dimen_title_oil_pressure">kg/cm2</string>
    <string name="dimen_title_rpm">rpm</string>
    <string name="new_password_change_txt">d</string>
    <string name="all_errors">View faults in your car</string>
    <string name="add_devices">Sensors add</string>
    <string name="devices_on_the_dashboard">Select the sensors you want to add to the dashboard</string>
    <string name="bt_connect">Bluetooth connecting…</string>
    <string name="please_wait">Please wait</string>
    <string name="start">Begin</string>
    <string name="phone">Phone:</string>
    <string name="e_mail">E-mail:</string>
    <string name="settings_profile">Profile settings</string>
    <string name="information">Personal information</string>
    <string name="add">Add</string>
    <string name="name_surname">First name and Last name</string>
    <string name="bday">Date of birth</string>
    <string name="phone_profile">Phone</string>
    <string name="email_profile">Email</string>
    <string name="policy_txt">I agree to the processing of personal data Agree to the privacy Policy</string>
    <string name="save">Save</string>
    <string name="search">Search…</string>
    <string name="search_big">FIND</string>
    <string name="frokm">from</string>
    <string name="to">to</string>
    <string name="category_error_list">Select a category to see the list of FAULTS</string>
    <string name="error_code">FAULT code</string>
    <string name="add_autor">ADD AUTO</string>
    <string name="car_brand_txt">Car brand:</string>
    <string name="car_brand_hint">Brand</string>
    <string name="car_model_txt">Car model:</string>
    <string name="car_model_hint">Model</string>
    <string name="car_year_txt">Year of car prod:</string>
    <string name="engine_num">Engine num:</string>
    <string name="body_num">Body num:</string>
    <string name="add_big">ADD</string>
    <string name="menu_txt">Menu</string>
    <string name="connect_to_device">Connect device</string>
    <string name="error_list_title">FAULTS list</string>
    <string name="my_cars">My cars</string>
    <string name="check_car">Checking the car</string>
    <string name="profile">Profile</string>
    <string name="record_history">History record</string>
    <string name="feedback">Feedback</string>
    <string name="connecting_by_bt">Bluetooth connecting…</string>
    <string name="input_vin">Enter the VIN in the format 4f2yu08102km26251</string>
    <string name="input_num_hint">Enter your code…</string>
    <string name="search_str">Search</string>
    <string name="error_list_tut">FAULTS list</string>
    <string name="see_all_errors_in_your_autro">View faults in your car</string>
    <string name="register">Registration</string>
    <string name="input_phone_num">Enter your phone number</string>
    <string name="country_code_hint">38</string>
    <string name="phone_num_hint">0933102515</string>
    <string name="your_name">Your name</string>
    <string name="your_phone">Phone:</string>
    <string name="your_email">E-mail:</string>
    <string name="settings_profile_btn">Profile settings</string>
    <string name="your_info">Personal information</string>
    <string name="upload_photo">Upload photo</string>
    <string name="add_photo">Add</string>
    <string name="change_password">Change password</string>
    <string name="your_get_new_password">You will receive a new password by SMS</string>
    <string name="name_surname_txt">First name and Last name</string>
    <string name="name">First name</string>
    <string name="surname">Last name</string>
    <string name="bday_hint">Date of birth</string>
    <string name="phone_settings">Phone</string>
    <string name="policy_str">I agree to the processing of personal data Agree to the privacy Policy</string>
    <string name="save_btn">Save</string>
    <string name="car_name">Name of car:</string>
    <string name="car_name_hint">Name</string>
    <string name="car_model">Car brand:</string>
    <string name="car_modelhint">Brand</string>
    <string name="model_car">Car model:</string>
    <string name="model">Model</string>
    <string name="car_year">Year of car prod:</string>
    <string name="car_year_hint">Year</string>
    <string name="engine_num_txt">Engine num:</string>
    <string name="engine_num_hint">Number</string>
    <string name="body_num_txt">Body num:</string>
    <string name="body_num_hint">Number</string>
    <string name="add_car">ADD</string>
    <string name="error_list">FAULTS list</string>
    <string name="category_dtc">Select a category to see the list of errors</string>
    <string name="code_error">FAULT CODE</string>
    <string name="description">DESCRIPTION</string>
    <string name="lang">Language</string>
    <string name="device_name">Device name</string>
    <string name="connect_type">Connection type</string>
    <string name="init_string">Initialization string</string>
    <string name="protocol_type">Protocol type</string>
    <string name="km_mils">Unit (km,mile)</string>
    <string name="register_title">Registration</string>
    <string name="input_your_num">Add your phone number</string>
    <string name="code_from_sms">SMS Code</string>
    <string name="input_code_from_sms">Add SMS Code</string>
    <string name="next">Next</string>
    <string name="check_by_vin">INSPECTION BY VIN CODE</string>
    <string name="check_by_num">INSPECTION BY THE NUMBER</string>
    <string name="check_car_by_vin">Car check by VIN code</string>
    <string name="input_vin_format">Enter the VIN code in the format 4f2yu08102km26251</string>
    <string name="input_code_hint">Add your code…</string>
    <string name="search_btn">Search</string>
    <string name="your_cars">Your cars:</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="check_connection">Check your internet connection and try again</string>
    <string name="refresh">Update</string>
    <string name="optional_fields">Optional field</string>
    <string name="no_bt_connection">Bluetooth not available</string>
    <string name="didnt_connect_to">Could’t connect to</string>
    <string name="error_send_message_ecu">Sending error messages to the ECU</string>
    <string name="pay_for_diagonostics">To add sensors to the panel, pay for the diagnostics</string>
    <string name="cannot_connect_to_device">Could not connect to device</string>
    <string name="connection_lost">The connection is lost</string>
    <string name="are_your_want_exit">Are you sure you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="recording_history_canceled">End history recording for</string>
    <string name="connected_to">Connected to %s</string>
    <string name="connected_to_device">Device connect</string>
    <string name="canceled_by_use">Canceled by user</string>
    <string name="starts_recording_for">Start history recording for</string>
    <string name="canceled_by_user">Canceled by user</string>
    <string name="choose_car_for_history_recording">Select car to write history:</string>
    <string name="error_cod_big">FAULT CODE</string>
    <string name="description_title">Description</string>
    <string name="no_description">no description available</string>
    <string name="settings">Settings</string>
    <string name="automatically_add_protocols">Automatic protocol detection</string>
    <string name="bt_not_enabled">Bluetooth not activate</string>
    <string name="see_all_your_errors">View faults in your car</string>
    <string name="see_gauges_at_real_time">View live OBD engine data</string>
    <string name="dashboard">Dashboard</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="year">Year</string>
    <string name="non_optional_fields_is_empty">Add required fields</string>
    <string name="auth_error">Authorization error</string>
    <string name="code_must">The code must consist of 4 digits</string>
    <string name="unreachable_phone">Invalid phone number</string>
    <string name="unreachable_country_code">Invalid country code</string>
    <string name="no_device_connection">No connection to device</string>
    <string name="no_info_about_car">No information about this car</string>
    <string name="body_systems">Body systems</string>
    <string name="car_engine">Car engine</string>
    <string name="electronics">Electronics</string>
    <string name="clear_faults">Clear</string>
    <string name="shasi">Chassis</string>
    <string name="agree_with_policy">Please agree with the Privacy Policy</string>
    <string name="voltage">Voltage</string>
    <string name="pids_0_20">PID\'s 0–20</string>
    <string name="dtc_cleared_mil_dtc">Monitor status after DTC clearing</string>
    <string name="freeze_dtc">Detected diagnostic error codes</string>
    <string name="fuel_system_status">Fuel System Status</string>
    <string name="calc_engine_load">"Engine load "</string>
    <string name="engine_coolant_temp">Coolant temp.</string>
    <string name="sh_term_fuel_trim_1">Short term fuel trim—Bank 1</string>
    <string name="ln_term_fuel_percent_trim_1">Long term fuel % trim—Bank 1</string>
    <string name="sh_term_fuel_trim_2">Short term fuel trim—Bank 2</string>
    <string name="ln_term_fuel_percent_trim_2">Long term fuel % trim—Bank 2</string>
    <string name="fuel_pressure">Fuel pressure</string>
    <string name="intake_manifold_pressure">Intake manifold pressure</string>
    <string name="engine_rpm">Engine speed</string>
    <string name="vehicle_speed">Vehicle speed</string>
    <string name="timing_advance">Timing advance</string>
</resources>