<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/menu"
    android:layout_width="200dp"
    android:layout_height="match_parent"
    android:background="@color/appBlue"
    android:visibility="visible">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="start|center_vertical"
            android:text="@string/menu_txt"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:fontFamily="@font/gte_esti_pto_text_bold" />


        <Button
            android:id="@+id/connect_to_bt_btn"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="32dp"
            android:background="@android:color/transparent"
            android:gravity="start|center_vertical"
            android:text="@string/connect_to_device"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:fontFamily="@font/gte_esti_pto_text_regular" />


        <Button
            android:id="@+id/dashboard_menu_btn"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="32dp"
            android:background="@android:color/transparent"
            android:gravity="start|center_vertical"
            android:text="@string/dashboard"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:fontFamily="@font/gte_esti_pto_text_regular" />


        <Button
            android:id="@+id/error_list_menu_btn"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@android:color/transparent"
            android:gravity="start|center_vertical"
            android:text="@string/error_list_title"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:fontFamily="@font/gte_esti_pto_text_regular" />


        <Button
            android:id="@+id/my_cars_btn"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@android:color/transparent"
            android:gravity="start|center_vertical"
            android:text="@string/my_cars"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:fontFamily="@font/gte_esti_pto_text_regular" />

        <Button
            android:id="@+id/check_car_menu_btn"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@android:color/transparent"
            android:gravity="start|center_vertical"
            android:text="@string/check_car"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:fontFamily="@font/gte_esti_pto_text_regular" />

        <Button
            android:id="@+id/profile_menu_btn"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@android:color/transparent"
            android:gravity="start|center_vertical"
            android:text="@string/profile"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:fontFamily="@font/gte_esti_pto_text_regular" />

        <Button
            android:id="@+id/settings_menu_btn"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@android:color/transparent"
            android:gravity="start|center_vertical"
            android:text="@string/settings"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:fontFamily="@font/gte_esti_pto_text_regular" />


        <LinearLayout
            android:id="@+id/save_to_history"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/record_history"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:fontFamily="@font/gte_esti_pto_text_regular" />


            <android.support.v7.widget.SwitchCompat
                style="@style/SwitchCompatStyle"
                android:id="@+id/save_to_history_chbx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>


        <Button
            android:id="@+id/message_to_developers"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@android:color/transparent"
            android:gravity="start|center_vertical"
            android:text="@string/feedback"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:fontFamily="@font/gte_esti_pto_text_regular"
            android:layout_marginBottom="35dp"/>


    </LinearLayout>
</ScrollView>